# Tarea04-Analisis

./: CMakeLists.txt  README.txt
benchmarks/: CMakeLists.txt  benchmarkFramework.hpp  benchmarkMatrixAdd.cpp
cmake/: AnpiConfig.hpp.in
include/: Allocator.hpp  AnpiConfig.hpp  Exception.hpp  HasType.hpp  Intrinsics.hpp  LUCrout.hpp  LUDoolittle.hpp  Matrix.hpp  Matrix.tpp  PlotPy.hpp  PlotPy.tpp  QR.hpp
include/bits/: MatrixArithmetic.hpp
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  testAllocator.cpp  testLU.cpp  testMain.cpp  testMatrix.cpp
